cmake_minimum_required(VERSION 3.17)
project(app_simple_form CXX)


list(APPEND library_source
   _.cpp
   _.h
   _app_simple_form.h
   application.cpp
   application.h
   document.cpp
   document.h
   form.cpp
   form.h
   form_001.cpp
   form_001.h
   form_002.cpp
   form_002.h
   frame.cpp
   frame.h
   impact.cpp
   impact.h
   framework.cpp
   framework.h
   main_frame.cpp
   main_frame.h
   main_impact.cpp
   main_impact.h
   tab_view.cpp
   tab_view.h
   )

add_library(app_simple_form ${library_source})

target_precompile_headers(app_simple_form PRIVATE framework.h)

set_target_properties(app_simple_form PROPERTIES LINKER_LANGUAGE CXX)

if (MSVC)
   target_compile_options(app_simple_form PRIVATE "/MD$<$<CONFIG:Debug>:d>")
   target_link_options(app_simple_form PRIVATE "/DEFAULTLIB:msvcrt$<$<CONFIG:Debug>:d>")
   target_link_options(app_simple_form PRIVATE "/SUBSYSTEM:WINDOWS")
   target_link_libraries(app_simple_form PRIVATE acme apex aqua aura axis base)
   add_dependencies(app_simple_form draw2d_gdiplus imaging_wic)
elseif(LINUX OR FREEBSD)
   target_compile_options(app_simple_form PRIVATE -fpermissive)
   #target_link_options(app_simple_form PRIVATE -Wl,-rpath=$ORIGIN)
   target_link_libraries(app_simple_form PRIVATE acme apex aqua aura axis base)
   target_link_options(app_simple_form PRIVATE -Wl,-z,defs)
endif ()


add_dependencies(app_simple_form experience_tranquillum)
add_dependencies(app_simple_form ${default_draw2d})
add_dependencies(app_simple_form ${default_imaging})
add_dependencies(app_simple_form ${default_write_text})
add_dependencies(app_simple_form ${app_common_dependencies})
add_dependencies(app_simple_form database_sqlite3)
add_dependencies(app_simple_form regular_expression_pcre2)




target_include_directories(app_simple_form PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../..)
target_include_directories(app_simple_form PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_include_directories(app_simple_form PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})


target_compile_definitions(app_simple_form PRIVATE _APP_SIMPLE_FORM_LIBRARY)


add_executable(_app_simple_form _app_simple_form.cpp)


add_custom_command(
   TARGET ${PROJECT_NAME}
   POST_BUILD
   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
   COMMAND ${APPLICATION_BUILD_HELPER} ${PROJECT_SOURCE_DIR}
   COMMAND ld -r -b binary -o ${PROJECT_BINARY_DIR}/_matter.zip.o _matter.zip
)

list(APPEND executable_references ${PROJECT_BINARY_DIR}/_matter.zip.o)




list(APPEND executable_references
   acme
   apex
   aqua
   aura
   axis
   base
   app_simple_form)


if (MSVC)

   target_compile_options(_app_simple_form PRIVATE "/MD$<$<CONFIG:Debug>:d>")
   target_link_options(_app_simple_form PRIVATE "/DEFAULTLIB:msvcrt$<$<CONFIG:Debug>:d>")
   target_link_options(_app_simple_form PRIVATE "/SUBSYSTEM:WINDOWS")
   target_link_libraries(_app_simple_form PRIVATE ${executable_references})

elseif(LINUX OR FREEBSD)

   target_compile_options(_app_simple_form PRIVATE -fpermissive)
   target_link_libraries(_app_simple_form PRIVATE ${executable_references})
   target_link_options(_app_simple_form PRIVATE -Wl,-z,defs)

endif ()


add_dependencies(_app_simple_form ${app_common_dependencies})
add_dependencies(_app_simple_form experience_core)
add_dependencies(_app_simple_form ${default_draw2d})
add_dependencies(_app_simple_form ${default_imaging})
add_dependencies(_app_simple_form ${default_write_text})
add_dependencies(_app_simple_form ${default_gpu})


target_include_directories(_app_simple_form PRIVATE ${library_include_directories})

target_link_directories(_app_simple_form PRIVATE ${library_link_directories})

set_target_properties(_app_simple_form PROPERTIES LINKER_LANGUAGE CXX)






